# HFI_WSS_Python_Interface

./: .gitignore  AGENTS.md  Dependencies.txt  LICENSE  README.md  requirements.txt
Config/: stimParams.json
WSS_Py_Wrapper/: LogSink.py  Logger.py  README.md  Stimulation.py  StimulationBasic.py  StimulationParams.py  TestScript.py  WSS_Loader.py  WSS_Py_Wrapper.py  WSS_Py_Wrapper.pyproj  WSS_Py_Wrapper.sln  portScanner.py  pyproject.toml
WSS_Py_Wrapper/Config/: modelConfig.json  stimParams.json
WSS_Py_Wrapper/Logs/: log_202601051625.txt  log_202601051627.txt  log_202601051629.txt  log_202601051631.txt  log_202601051633.txt  log_202601051634.txt  log_202601051636.txt  log_202601051637.txt  log_202601051638.txt  log_202601051640.txt  log_202601051641.txt  log_202601051642.txt  log_202601051645.txt
WSS_Py_Wrapper/configs/: Loc.py  stimConfig.json
WSS_Py_Wrapper/docs/: conf.py  usage.rst
WSS_Py_Wrapper/src/wss_py_wrapper/: __init__.py  cli.py  config.py  log_sink.py  logger.py  stimulation_controller.py  wss_loader.py
temp/: Program.cs  StimulationController.cs
