[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wss-py-wrapper"
version = "0.1.0"
description = "Python wrapper for HFI_WSS_Interface"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pythonnet>=3.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
